# Chip8HS

./: .repos  chip8hs.cabal  hie.yml
app/: Main.hs
src/: Chip8.hs  Helper.hs  Machine.hs  Memory.hs
test/: Tests.hs
