cabal-version: 3.8
name:          chip8
version:       0.1.0.0
author:        nobbele
maintainer:    realnobbele@gmail.com

test-suite test
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall
  hs-source-dirs: test
  main-is:        Tests.hs
  build-depends:
    , base
    , chip8
    , containers  ^>=0.7
    , HUnit
    , vector      ^>=0.13.1.0

library
  hs-source-dirs:  src
  exposed-modules:
    Chip8
    Helper
    Machine
    Memory

  other-modules:
  ghc-options:     -Wall
  build-depends:
    , base        ^>=4.17.2.1
    , containers  ^>=0.7
    , random      ^>=1.2.1.2
    , vector      ^>=0.13.1.0

executable chip8
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -Wall
  build-depends:
    , base        ^>=4.17.2.1
    , chip8
    , containers  ^>=0.7
    , vector      ^>=0.13.1.0
