cabal-version: 3.8
name:          chip8
version:       0.1.0.0
author:        nobbele
maintainer:    realnobbele@gmail.com

test-suite test
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall
  hs-source-dirs: test
  main-is:        Tests.hs
  build-depends:
    , base
    , chip8
    , containers  ^>=0.6.8
    , HUnit
    , vector      ^>=0.13.1.0

library
  hs-source-dirs:  src
  exposed-modules:
    Chip8
    Helper
    Machine
    Memory

  other-modules:
  ghc-options:     -Wall -Wno-unrecognised-pragmas
  build-depends:
    , base        ^>=4.17.2.1
    , containers  ^>=0.6.8
    , mtl         ^>=2.3.1
    , random      ^>=1.2.1.2
    , vector      ^>=0.13.1.0

executable chip8
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -Wall -Wno-unrecognised-pragmas
  build-depends:
    , base        ^>=4.17.2.1
    , bytestring  ^>=0.11.5.3
    , chip8
    , containers  ^>=0.6.8
    , mtl         ^>=2.3.1
    , sdl2        ^>=2.5.5.0
    , vector      ^>=0.13.1.0
